# blog

./: Cargo.toml  Dioxus.toml  Makefile.toml  README.md  create_tailwind.sh  deploy.sh  serve.sh  serve_dev.sh
blog/: Dioxus.toml
blog/src/: main.rs
blog/src/components/: nav.rs
blog/src/pages/: cv.rs
posts/: first.md
scripts/: create_tailwind.sh  deploy.sh  serve.sh  serve_dev.sh
src/: main.rs  router.rs
src/components/: head.rs  mod.rs  nav.rs
src/pages/: blog.rs  cv.rs  home.rs  mod.rs  not_found.rs  secret_page.rs
src/services/: supabase.rs
src/utils/: files.rs
