[package]
name = "blog"
version = "0.1.0"
edition = "2018"
#authors = ["Emil Woźniak <emil.wozniak.591986@gmail.com>"]

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router"] }

log = "0.4.6"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
chrono = "0.4.23"

