[package]
name = "blog"
version = "0.1.0"
edition = "2018"
authors = ["Emil Woźniak <emil.wozniak.591986@gmail.com>"]

[dependencies]
dioxus = { version = "0.2.4", features = ["web", "router"] }
chrono = "0.4.23"
log = "0.4.6"
# Rest
http = "0.2"
minreq = "2.6.0"

# WebAssembly Debug
wasm-logger = "0.2.0"
console_error_panic_hook = "0.1.7"
markdown = "0.3.0"
postgrest = "1.3.2"
walkdir = "2.3.2"
glob = "0.3.0"
serde_json = "1.0.89"
serde = { version =  "1.0.149", features = ["derive"] }
futures-util = "0.3.25"
dioxus-helmet = "0.2.4"
regex = "1.7.0"


